# proto2puml

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  README.rst  build_html.sh  start_emscripten.bat
html/: index.html
include/: proto2puml.h  proto3_grammar.hpp  puml_printer.hpp
samples/: adressbook.proto  simple.proto
src/: main.cpp  parse_tree_to_dot.hpp  parse_tree_to_puml.hpp  proto2puml.cpp  proto3_grammar.hpp  puml_printer.cpp  test.cpp
test/: test.cpp
